[package]
name          = "rpm-spec"
version       = "0.3.0"
edition       = "2024"
rust-version  = "1.85"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/johnlepikhin/rpm-spec"
documentation = "https://docs.rs/rpm-spec"
readme        = "README.md"
authors       = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
description   = "Parser and pretty-printer for RPM .spec files"
keywords      = ["rpm", "spec", "parser", "printer", "packaging"]
categories    = ["parser-implementations", "text-processing"]
exclude       = ["*.log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["parser", "printer"]
parser  = ["dep:nom", "dep:nom_locate"]
# `printer` has no extra dependencies; the flag exists purely to gate
# `pub mod printer` so AST-only consumers can disable it.
printer = []
serde   = ["dep:serde"]
# `tracing` adds `#[instrument]` attributes on hot paths
# (per-line / per-section parsers and `push_diagnostic`). Leave it
# disabled in production builds where span overhead matters.
tracing = ["dep:tracing"]

[dependencies]
nom        = { version = "8.0", default-features = false, features = ["alloc"], optional = true }
nom_locate = { version = "5.0", optional = true }
serde      = { version = "1.0", features = ["derive"], optional = true }
thiserror  = { version = "2.0" }
tracing    = { version = "0.1", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
